# interviewing-microsoft-questions

./: .gitignore  CMakeLists.txt
1 - Arrays and Strings/: 1_1.cpp
